--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>☕Java Developer Bootcamp🍃</h1>
+    <p>Adopted using Devoxify's <a target="_blank" href="https://www.devoxify.com/posts/the-definitive-guide-to-java-backend-developer-career-path/">Definitive Guide to Java Backend Developer Path</a>
     <h3>Part 1</h3>
     <ul>
         <li><a href="#core-java">1.1 Core Java</a></li>
