--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <th>Linux Video Tutorial</th>
           </tr>
           <tr>
-            <td>JavaTPoint</td>
+            <td>TechSpot</td>
             <td>Youtube</td>
           </tr>
           <tr>
