--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             <th>HTTP Video Tutorial</th>
           </tr>
           <tr>
-            <td>JavaTPoint</td>
+            <td>FreeCodeCamp</td>
             <td>Youtube</td>
           </tr>
           <tr>
-            <td><a target="_blank" href="https://www.javatpoint.com/http-tutorial">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://www.freecodecamp.org/news/http-and-everything-you-need-to-know-about-it/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=M7nO5Sw1esU&t=533s">Link to Video</a></td>
           </tr>
         </table> <br>
