--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/index.html">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=JhSBS2OpGdU&t=40s">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=b93NNK2J3GM">Link to Video</a></td>
             </tr>
           </table> <br>
 
