--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
               <th>Maven Video Tutorial</th>
             </tr>
             <tr>
-              <td>Apache Maven</td>
+              <td>Bealdung</td>
               <td>YouTube</td>
             </tr>
             <tr>
-              <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/index.html">Link to Tutorial</a></td>
+              <td><a target="_blank" href="https://www.baeldung.com/maven">Link to Tutorial</a></td>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=JhSBS2OpGdU">Link to Video</a></td>
             </tr>
           </table> <br>
