--- a/index.html
+++ b/index.html
@@ -121,9 +121,45 @@
       <hr>
 
     <h4 id="webdevbasics">1.3 Web dev basics</h4>
-        <p>Know what is HTTP request or what is a static website </p>
+        <p><strong>How The Web Works</strong>Understand the basics of the internet and its technologies</p>
 
-        <p><strong>HTTP Protocol</strong> - Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which. </p>
+        <table>
+
+          <tr>
+              <th colspan="2" class="course-title">HTML</th>
+              <th colspan="2" class="course-title">CSS</th>
+              <th colspan="2" class="course-title">JavaScript</th>
+
+
+
+          <tr>
+              <th>How the Web Works Text Tutorial</th>
+              <th>HTML Video Tutorial</th>
+              <th>Client-Server Model Text Tutorial</th>
+              <th>Client-Server Model Video Tutorial</th>
+              <th>HTTP & REST Text Tutorial</th>
+              <th>JS Video Tutorial</th>
+          </tr>
+          <tr>
+            <td>Free Code Camp</td>
+            <td>YouTube Video</td>
+            <td>Free Code Camp</td>
+            <td>YouTube Video</td>
+            <td>Free Code Camp</td>
+            <td>YouTube Video</td>
+          </tr>
+          <tr>
+            <td><a target="_blank" href="https://www.freecodecamp.org/news/how-the-web-works-a-primer-for-newcomers-to-web-development-or-anyone-really-b4584e63585c">Link to Article</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=AEaKrq3SpW8">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.freecodecamp.org/news/how-the-web-works-part-ii-client-server-model-the-structure-of-a-web-application-735b4b6d76e3/">Link to Article</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=vcRmKtL4o_4">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.freecodecamp.org/news/how-the-web-works-part-iii-http-rest-e61bc50fa0a/">Link to Article</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=_7rT-ixivWU">Link to Video</a></td>
+          </tr>
+        </table> <br>
+    
+    
+        <p><strong>HTTP Protocol</strong> - Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which. </p>
 
         <table>
           <tr>
