--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
       <hr>
 
     <h4 id="webdevbasics">1.3 Web dev basics</h4>
-        <p><strong>How The Web Works</strong>Understand the basics of the internet and its technologies</p>
+        <p><strong>How The Web Works</strong>Understand the basics of the internet and its technologies. Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which.</p>
 
         <table>
 
           <tr>
-              <th colspan="2" class="course-title">HTML</th>
-              <th colspan="2" class="course-title">CSS</th>
-              <th colspan="2" class="course-title">JavaScript</th>
+              <th colspan="2" class="course-title">How the Web Works</th>
+              <th colspan="2" class="course-title">Web Application Structure</th>
+              <th colspan="2" class="course-title">HTTP & REST</th>
 
 
 
           <tr>
               <th>How the Web Works Text Tutorial</th>
               <th>HTML Video Tutorial</th>
-              <th>Client-Server Model Text Tutorial</th>
-              <th>Client-Server Model Video Tutorial</th>
+              <th>Web Application Structure Tutorial</th>
+              <th>Web Application Structure Video Tutorial</th>
               <th>HTTP & REST Text Tutorial</th>
-              <th>JS Video Tutorial</th>
+              <th>HTTP & REST Video Tutorial</th>
           </tr>
           <tr>
             <td>Free Code Camp</td>
@@ -158,27 +158,7 @@
           </tr>
         </table> <br>
     
-    
-        <p><strong>HTTP Protocol</strong> - Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which. </p>
-
-        <table>
-          <tr>
-              <th colspan="2" class="course-title">HTTP</th>
-          </tr>
-          <tr>
-            <th>HTTP Text Tutorial</th>
-            <th>HTTP Video Tutorial</th>
-          </tr>
-          <tr>
-            <td>FreeCodeCamp</td>
-            <td>Youtube</td>
-          </tr>
-          <tr>
-            <td><a target="_blank" href="https://www.freecodecamp.org/news/http-and-everything-you-need-to-know-about-it/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=M7nO5Sw1esU&t=533s">Link to Video</a></td>
-          </tr>
-        </table> <br>
-
+ 
     <h4>HTML, CSS, JavaScript</h4>
         <p>Know the basics of these three.Try to find any crash course for each of these three. After that, you should know what to put under meta tag, what is div, how to add color to text with CSS, and maybe how to put a button on your site which will show a popup window with some text after the user clicks it. That will be enough.</p>
 
