--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <hr>
 
     <h4 id="webdevbasics">1.3 Web dev basics</h4>
-        <p><strong>How The Web Works</strong>Understand the basics of the internet and its technologies. Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which.</p>
+        <p><strong>How The Web Works</strong> -  Understand the basics of the internet and how web applications are stuctured. Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which.</p>
 
         <table>
 
@@ -197,7 +197,7 @@
           </tr>
         </table> <br>
 
-        
+
       <p><strong>AJAX</strong> -  Asynchronous JavaScript and XML. In essence, Ajax is an efficient way for a web application to handle user interactions with a web page - a way that reduces the need to do a page refresh or full page reload for every user interaction. </p>
 
             <table>
