--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 
 
           <tr>
-              <th>How the Web Works Text Tutorial</th>
-              <th>HTML Video Tutorial</th>
+              <th>Internet Basics Text Tutorial</th>
+              <th>Internet Basics Video Tutorial</th>
               <th>Web Application Structure Tutorial</th>
               <th>Web Application Structure Video Tutorial</th>
               <th>HTTP & REST Text Tutorial</th>
