--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <table>
 
           <tr>
-              <th colspan="2" class="course-title">How the Web Works</th>
+              <th colspan="2" class="course-title">Internet Basicsth>
               <th colspan="2" class="course-title">Web Application Structure</th>
               <th colspan="2" class="course-title">HTTP & REST</th>
 
