--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <table>
 
           <tr>
-              <th colspan="2" class="course-title">Internet Basicsth>
+              <th colspan="2" class="course-title">Internet Basics<th>
               <th colspan="2" class="course-title">Web Application Structure</th>
               <th colspan="2" class="course-title">HTTP & REST</th>
 
@@ -135,7 +135,7 @@
           <tr>
               <th>Internet Basics Text Tutorial</th>
               <th>Internet Basics Video Tutorial</th>
-              <th>Web Application Structure Tutorial</th>
+              <th>Web Application Structure Text Tutorial</th>
               <th>Web Application Structure Video Tutorial</th>
               <th>HTTP & REST Text Tutorial</th>
               <th>HTTP & REST Video Tutorial</th>
