--- a/index.html
+++ b/index.html
@@ -124,13 +124,10 @@
         <p><strong>How The Web Works</strong> -  Understand the basics of the internet and how web applications are stuctured. Know what is HTTP request or what is a static website. Know all available HTTP methods and understand the difference between them, like what is the difference between POST and GET. You should know what are request params and request body and when you can use which.</p>
 
         <table>
-
           <tr>
-              <th colspan="2" class="course-title">Internet Basics<th>
+              <th colspan="2" class="course-title">Internet Basics</th>
               <th colspan="2" class="course-title">Web Application Structure</th>
               <th colspan="2" class="course-title">HTTP & REST</th>
-
-
 
           <tr>
               <th>Internet Basics Text Tutorial</th>
