--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="#core-java">1.1 Core Java</a></li>
         <li><a href="#java-oop">1.2 Java OOP</a></li>
-        <li><a href="#second-app">1.3 <strong>Write 1st app</strong> (Java OOP)</a> </li>
+        <li><a href="#first-app">1.3 <strong>Write 1st app</strong> (Java OOP)</a> </li>
         <li><a href="#webdevbasics">1.4 Web Dev Basics: HTTP protocol and basics of HTML, JavaScript, CSS, AJAX</a></li>
         <li><a href="#mvc">1.5 MVC Pattern</a></li>
         <li><a href="#linux">1.6 Linux</a></li>
