--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.jetbrains.com/idea/guide/tutorials/getting-started-spring-data-jpa/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=XszpXoII9Sg">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=JB2f29OcciM">Link to Video</a></td>
           </tr>
         </table> <br>
 
