--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.mysqltutorial.org/mysql-jdbc-tutorial/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=3OrEsC-QjUA">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLhs1urmduZ2-yp3zID5rMEmXDETN8xvMo">Link to Playlist</a></td>
             <td><a target="_blank" href="https://www.codejava.net/java-se/jdbc/jdbc-tutorial-sql-insert-select-update-and-delete-examples">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=1pA64-foiz8">Link to Video</a></td>
           </tr>
