--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <th>MVC Video Tutorial</th>
           </tr>
           <tr>
-            <td>freeCodeCamp</td>
+            <td>edureka</td>
             <td>YouTube</td>
           </tr>
           <tr>
