--- a/index.html
+++ b/index.html
@@ -389,6 +389,29 @@
 
         <hr>
 
+        <h4 id="maven">1.10 Website Security</h4>
+        <p>Since you're able to create web applications, understanding import web security threat and concepts will be valuable.</p>
+
+          <table>
+            <tr>
+                <th colspan="2" class="course-title">Web Security</th>
+            </tr>
+            <tr>
+              <th>Web Security Text Tutorial</th>
+              <th>Web Security Video Tutorial</th>
+            </tr>
+            <tr>
+              <td>MDN</td>
+              <td>Fireship (YouTube)</td>
+            </tr>
+            <tr>
+              <td><a target="_blank" href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Website_security">Link to Article</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=4YOpILi9Oxs">Link to Video</a></td>
+            </tr>
+          </table> <br>
+
+          <hr>
+
         <h4 id="maven">1.10 Maven</h4>
         <p>To build even a very simple web application in Java you will need some build tool that will make your life easier. It will fetch your external dependencies from the central server so you don’t have to do it manually. It will also help you to build and manage your project. Try to spend some time to understand basic concepts because you shouldn’t go to the next steps without knowing how it works.</p>
 
@@ -411,8 +434,7 @@
           </table> <br>
 
           <hr>
-
-
+    
           <h4 id="servlets-jsp-videos">1.11 JSP/Servlet/JDBC Project Tutorials </h4>
           <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
             <table>
