--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <li><a href="#databases">1.7 Databases (MySQL/Postgres)</a></li>
         <li><a href="#mvc">1.8 MVC Pattern</a></li>
         <li><a href="#jdbc">1.9 JDBC</a></li>
-        <li><a href="#maven">1.10 Build Tools: Maven</a></li>
-        <li><a href="#servlets-jsp-videos">1.11 JSP/Servlet/JDBC Project Tutorials </a> </li>
-        <li><a href="#second-app">1.12 <strong>Write 2nd app</strong> (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</a> </li>
+        <li><a href="#security">1.10 Website Security</a></li>
+        <li><a href="#maven">1.11 Build Tools: Maven</a></li>
+        <li><a href="#servlets-jsp-videos">1.12 JSP/Servlet/JDBC Project Tutorials </a> </li>
+        <li><a href="#second-app">1.13 <strong>Write 2nd app</strong> (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</a> </li>
     </ul>
 
     <h3>Part 2</h3>
@@ -389,7 +390,7 @@
 
         <hr>
 
-        <h4 id="maven">1.10 Website Security</h4>
+        <h4 id="security">1.10 Website Security</h4>
         <p>Since you're able to create web applications, understanding import web security threat and concepts will be valuable.</p>
 
           <table>
@@ -412,7 +413,7 @@
 
           <hr>
 
-        <h4 id="maven">1.10 Maven</h4>
+        <h4 id="maven">1.11 Maven</h4>
         <p>To build even a very simple web application in Java you will need some build tool that will make your life easier. It will fetch your external dependencies from the central server so you don’t have to do it manually. It will also help you to build and manage your project. Try to spend some time to understand basic concepts because you shouldn’t go to the next steps without knowing how it works.</p>
 
           <table>
@@ -435,7 +436,7 @@
 
           <hr>
     
-          <h4 id="servlets-jsp-videos">1.11 JSP/Servlet/JDBC Project Tutorials </h4>
+          <h4 id="servlets-jsp-videos">1.12 JSP/Servlet/JDBC Project Tutorials </h4>
           <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
             <table>
               <th>Employee Login Form</th>
@@ -459,7 +460,7 @@
             </table> <br>
           <hr>
 
-          <h4 id="second-app">🌟1.12 Write 2nd Java app (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</h4>
+          <h4 id="second-app">🌟1.13 Write 2nd Java app (Servlets + JDBC + MySql/Postgres + JSP/Thymleaf)</h4>
   
   
           <p>Finally! Now you should be familiar with <strong>core Java, Maven, HTTP protocol, MVC Patten, Servlets, MySQL, JDBC, and JSP/Thymeleaf.</strong>That will allow us to create a very simple, “low level” dynamic website. I recommend you to create a very simple CRUD app with the mentioned technologies. Nothing complicated, as I said the purpose of this project is to show you how the simplest Java web app without any big external frameworks might be done, it’s should be as simple a possible but it should use all of the mentioned technologies and handle CRUD operations.<br> Now if you would continue extending this project by adding new features you would find that it’s getting messy and it’s harder to maintain with every new feature. I highly encourage you to do it. Try to add some features like your own, very naive auth system, or the possibility to list all books by a given author or sorting records in a table by title. You might end up (and that’s nothing bad) with some spaghetti code which you will not understand at the end. That’s why we need to learn things from Part 2.</p>
