--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <hr>
 
         <h4 id="security">1.10 Website Security</h4>
-        <p>Since you're able to create web applications, understanding import web security threat and concepts will be valuable.</p>
+        <p>Since you're able to create web applications, understanding important web security threats and concepts will be valuable.</p>
 
           <table>
             <tr>
