--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.w3schools.com/sql/default.asp">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=0hKmmh_4t7w">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL1LIXLIF50uXWJ9alDSXClzNCMynac38g">Link to Playlist</a></td>
             <td><a target="_blank" href="https://dotnettutorials.net/course/mysql-tutorials-for-beginners-and-professionals/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=ER8oKX5myE0&t=3900s">Link to Video</a></td>
 
