--- a/index.html
+++ b/index.html
@@ -520,19 +520,19 @@
           </tr>
           <tr>
             <td>CodeJava</td>
-            <td>YouTube</td>
+            <td>Telusko (YouTube)</td>
             <td>Code Java</td>
-            <td>YouTube</td>
+            <td>Telusko (YouTube)</td>
             <td>Spring.io</td>
-            <td>YouTube</td>
+            <td>Telusko (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=j3byTqx7KDE">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=If1Lw4pLLEo">Link to Video</a></td>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=Ku3gsv7_bCc">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
             <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=c3gKseNAs9w">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=35EQXmHKZYs">Link to Video</a></td>
           </tr>
         </table> <br>
 
@@ -592,7 +592,7 @@
           </tr>
           <tr>
             <td>Jetbrains</td>
-            <td>YouTube<br><a href="https://www.codejava.net/frameworks/spring/understand-spring-data-jpa-with-simple-example" target="_blank">Link to Walkthrough</a></td>
+            <td>Code Java (YouTube) <br><a href="https://www.codejava.net/frameworks/spring/understand-spring-data-jpa-with-simple-example" target="_blank">Link to Walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.jetbrains.com/idea/guide/tutorials/getting-started-spring-data-jpa/">Link to Tutorial</a></td>
@@ -641,7 +641,7 @@
           </tr>
           <tr>
             <td>Auth0</td>
-            <td>YouTube</td>
+            <td>Telusko (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://auth0.com/blog/spring-security-overview/">Link to Tutorial</a></td>
@@ -680,7 +680,7 @@
             <th>Employee Management App</th>
             </tr>
             <tr>
-              <th>Spring Framework Genius<br></th>
+              <th>Spring Framework Guru<br></th>
               <td>Kindson The Genius <br><a target="_blank" href="https://www.kindsonthegenius.com/spring-boot/build-a-complete-spring-boot-application-from-the-scratch-step-by-step/">Employee Management Walkthrough</a></td>
 
             </tr>
@@ -705,7 +705,7 @@
           </tr>
           <tr>
             <td>w3schools</td>
-            <td>YouTube</td>
+            <td>Nick White (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.w3schools.com/git/">Link to Tutorial</a></td>
@@ -756,7 +756,7 @@
           </tr>
           <tr>
             <td>Edureka</td>
-            <td>YouTube</td>
+            <td>Coding Simplified (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.edureka.co/blog/java-design-patterns/">Link to Tutorial</a></td>
@@ -779,7 +779,7 @@
           </tr>
           <tr>
             <td>JUnit.org</td>
-            <td>YouTube</td>
+            <td>Amigos Code (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://junit.org/junit5/docs/current/user-guide/">Link to Tutorial</a></td>
@@ -803,7 +803,7 @@
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td>YouTube <br> <a target="_blank" href="https://examples.javacodegeeks.com/spring-boot-microservices-example/">Link to Walkthrough</a></td>
+            <td>Java Code Geeks (YouTube) <br> <a target="_blank" href="https://examples.javacodegeeks.com/spring-boot-microservices-example/">Link to Walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
@@ -827,7 +827,7 @@
           </tr>
           <tr>
             <td>RabbitMQ Official</td>
-            <td>YouTube</td>
+            <td>Daily Code Buffer (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.rabbitmq.com/tutorials/tutorial-one-java.html">Link to Tutorial</a></td>
@@ -875,7 +875,7 @@
         </tr>
         <tr>
           <td>Spring.io</td>
-          <td>YouTube</td>
+          <td>Daily Code Buffer (YouTube)</td>
         </tr>
         <tr>
           <td><a target="_blank" href="https://spring.io/guides/gs/messaging-stomp-websocket/">Link to Tutorial</a></td>
@@ -900,7 +900,7 @@
         </tr>
         <tr>
           <td>Code Java</td>
-          <td>YouTube</td>
+          <td>Code Java (YouTube)</td>
         </tr>
         <tr>
           <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-restful-web-services-tutorial-for-beginner-with-jersey-and-tomcat">Link to Tutorial</a></td>
@@ -919,7 +919,7 @@
       </tr>
       <tr>
         <td>Code Java</td>
-        <td>YouTube</td>
+        <td>Code Java (YouTube)</td>
       </tr>
       <tr>
         <td><a target="_blank" href="https://www.codejava.net/java-ee/web-services/java-crud-restful-web-services-examples-with-jersey-and-tomcat">Link to Tutorial</a></td>
@@ -945,7 +945,7 @@
       </tr>
       <tr>
         <td>Code Java</td>
-        <td>YouTube</td>
+        <td>Code Java (YouTube)</td>
       </tr>
       <tr>
         <td><a target="_blank" href="https://www.codejava.net/frameworks/spring-boot/spring-boot-hello-world-restful-web-services-tutorial">Link to Tutorial</a></td>
@@ -991,7 +991,7 @@
     </tr>
     <tr>
       <td>w3schools</td>
-      <td>YouTube</td>
+      <td>Awais Mirza (YouTube)</td>
     </tr>
     <tr>
       <td><a target="_blank" href="https://www.w3schools.com/angular/">Link to Tutorial</a></td>
@@ -1065,9 +1065,9 @@
         <th>Log4j Tutorial</th>
     </tr>
     <tr>
-      <td>YouTube</td>
-      <td>YouTube</td>
-      <td>YouTube</td>
+      <td> 0612 TV w/ NERDfirst (YouTube)</td>
+      <td>Automation Step by Step (YouTube)</td>
+      <td>Daniel Persson (YouTube)</td>
 
     </tr>
     <tr>
