--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>☕Java Developer Bootcamp 2022🍃</h1>
+  <h1>☕Java Web Developer Bootcamp🍃</h1>
     <p>Adopted using Devoxify's <a target="_blank" href="https://www.devoxify.com/posts/the-definitive-guide-to-java-backend-developer-career-path/">Definitive Guide to Java Backend Developer Path</a>
     <h3>Part 1</h3>
     <ul>
