--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=JhSBS2OpGdU">Link to Playlist</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLzS3AYzXBoj8E3NjjWNjrrFjyexXIyZbL">Link to Playlist</a></td>
             </tr>
           </table> <br>
 
