--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@
             </tr>
             <tr>
               <td>Apache Maven</td>
-              <td>KK JavaTutorials (YouTube)</td>
+              <td>edureka (YouTube)</td>
             </tr>
             <tr>
               <td><a target="_blank" href="https://maven.apache.org/guides/getting-started/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLzS3AYzXBoj8E3NjjWNjrrFjyexXIyZbL">Link to Playlist</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=x8sMN4tossY">Link to Video</a></td>
             </tr>
           </table> <br>
 
