--- a/index.html
+++ b/index.html
@@ -367,21 +367,15 @@
           </tr>
           <tr>
             <th>JDBC Text Tutorial</th>
-            <th>JDBC Video Tutorial</th>
-            <th>JDBC CRUD Text Tutorial</th>
-            <th>JDBC CRUD Video Tutorial</th>
+            <th>JDBC + JBDC CRUD Video Tutorial</th>
           </tr>
           <tr>
             <td>MySQLTutorial.org</td>
-            <td>Genuine Coder (YouTube)</td>
-            <th>Code Java</th>
-            <th>Code Java (JDBC Video Tutorial)</th>
+            <th>Learn Programming Yourself</th>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.mysqltutorial.org/mysql-jdbc-tutorial/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLhs1urmduZ2-yp3zID5rMEmXDETN8xvMo">Link to Playlist</a></td>
-            <td><a target="_blank" href="https://www.codejava.net/java-se/jdbc/jdbc-tutorial-sql-insert-select-update-and-delete-examples">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=1pA64-foiz8">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLZTETldyguF1xVO4fxgWTQOP7fTR3ClYu">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
