--- a/index.html
+++ b/index.html
@@ -370,11 +370,11 @@
             <th>JDBC + JBDC CRUD Video Tutorial</th>
           </tr>
           <tr>
-            <td>MySQLTutorial.org</td>
+            <td>Code Java</td>
             <th>Learn Programming Yourself</th>
           </tr>
           <tr>
-            <td><a target="_blank" href="https://www.mysqltutorial.org/mysql-jdbc-tutorial/">Link to Tutorial</a></td>
+            <td><a target="_blank" href="https://www.codejava.net/jdbc-tutorials">Link to Tutorials</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLZTETldyguF1xVO4fxgWTQOP7fTR3ClYu">Link to Playlist</a></td>
           </tr>
         </table> <br>
