--- a/index.html
+++ b/index.html
@@ -750,11 +750,11 @@
           </tr>
           <tr>
             <td>Edureka</td>
-            <td>Coding Simplified (YouTube)</td>
+            <td>Edureka (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.edureka.co/blog/java-design-patterns/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLt4nG7RVVk1h9lxOYSOGI9pcP3I5oblbx">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=C_oPLDaSy-8">Link to Video</a></td>
           </tr>
         </table> <br>
 
