--- a/index.html
+++ b/index.html
@@ -514,19 +514,19 @@
           </tr>
           <tr>
             <td>CodeJava</td>
-            <td>Telusko (YouTube)</td>
+            <td>Simplilearn (YouTube)</td>
             <td>Code Java</td>
             <td>Telusko (YouTube)</td>
             <td>Spring.io</td>
-            <td>Telusko (YouTube)</td>
+            <td>Edureka (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=If1Lw4pLLEo">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=j3byTqx7KDE">Link to Video</a></td>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
             <td><a target="_blank" href="https://spring.io/guides/gs/spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=35EQXmHKZYs">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=UfOxcrxhC0s">Link to Video</a></td>
           </tr>
         </table> <br>
 
@@ -541,7 +541,7 @@
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
             </tr>
             <tr>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs&t=331s">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
             </tr>
           </table> <br>
 
