--- a/index.html
+++ b/index.html
@@ -797,11 +797,11 @@
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td>Java Code Geeks (YouTube) <br> <a target="_blank" href="https://examples.javacodegeeks.com/spring-boot-microservices-example/">Link to Walkthrough</a></td>
+            <td>edureka (YouTube) <br> <a target="_blank" href="https://examples.javacodegeeks.com/spring-boot-microservices-example/">Link to Walkthrough</a></td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=rHfOlsqaTYk">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=tuJqH3AV0e8">Link to Video</a></td>
           </tr>
         </table> <br>
 
