--- a/index.html
+++ b/index.html
@@ -985,11 +985,11 @@
     </tr>
     <tr>
       <td>w3schools</td>
-      <td>Awais Mirza (YouTube)</td>
+      <td>edureka (YouTube)</td>
     </tr>
     <tr>
       <td><a target="_blank" href="https://www.w3schools.com/angular/">Link to Tutorial</a></td>
-      <td><a target="_blank" href="https://www.youtube.com/watch?v=LA_v8isNp5E&t=60s">Link to Video</a></td>
+      <td><a target="_blank" href="https://www.youtube.com/watch?v=88rSZG2mUYs">Link to Video</a></td>
     </tr>
   </table> <br>
 
