--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
           </tr>
           <tr>
             <td>JavaDevJournal</td>
-            <td>edureka (YouTube) <br> <a target="_blank" href="https://examples.javacodegeeks.com/spring-boot-microservices-example/">Link to Walkthrough</a></td>
+            <td>edureka (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.javadevjournal.com/spring-boot/microservices-with-spring-boot/">Link to Tutorial</a></td>
