--- a/index.html
+++ b/index.html
@@ -536,12 +536,18 @@
         <p>Step-by-Step guided tutorial of completed projects. Will be helpful before creating your own project</p>
           <table>
             <th>Contact List App (Spring MVC)</th>
+            <th>Employee Management App (Spring Boot)</th>
+
             </tr>
             <tr>
               <td>Code Java <br><a target="_blank" href="https://www.codejava.net/frameworks/spring/spring-mvc-with-jdbctemplate-example">Contact List App Walkthrough</a></td>
+              <td>B2 Tech</td>
+
             </tr>
             <tr>
               <td><a target="_blank" href="https://www.youtube.com/watch?v=-wddkBQZuPs">Link to Video</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLA7e3zmT6XQV6dRpcyrdl0i27h5kDdmp1">Link to Playlist</a></td>
+
             </tr>
           </table> <br>
 
@@ -635,11 +641,11 @@
           </tr>
           <tr>
             <td>Auth0</td>
-            <td>Telusko (YouTube)</td>
+            <td>Java Brains (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://auth0.com/blog/spring-security-overview/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=fjkelzWNSuA&t=3049ss">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTYTEooakHchTGglSvkZAjnE">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
@@ -773,11 +779,11 @@
           </tr>
           <tr>
             <td>JUnit.org</td>
-            <td>Amigos Code (YouTube)</td>
+            <td>Java Brains (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://junit.org/junit5/docs/current/user-guide/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=Geq60OVyBPg">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLqq-6Pq4lTTa4ad5JISViSb2FVG8Vwa4o">Link to Playlist</a></td>
           </tr>
         </table> <br>
 
