--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#webdevbasics">1.4 Web Dev Basics: HTTP protocol and basics of HTML, JavaScript, CSS, AJAX</a></li>
         <li><a href="#linux">1.5 Linux</a></li>
         <li><a href="#servlets-jsp">1.6 Web Servers, Servlets, Thymeleaf/JSP</a></li>
-        <li><a href="#databases">1.7 Databases (MySQL/Postgres)</a></li>
+        <li><a href="#databases">1.7 Databases</a></li>
         <li><a href="#mvc">1.8 MVC Pattern</a></li>
         <li><a href="#jdbc">1.9 JDBC</a></li>
         <li><a href="#security">1.10 Website Security</a></li>
