--- a/index.html
+++ b/index.html
@@ -460,41 +460,7 @@
           <hr class="section-separator">
 
 
-      <h4 id="jpa-hibernate">2.1 ORM, JPA, Hibernate</h4>
-        <p> Apart from learning Spring you have to learn Hibernate. You need to know how to create your models and what relation annotation to use so that Spring could do its magic.</p>
-        <p><strong>ORM </strong>- The idea of taking java objects and mapping them to a data store. You can have a single class that will have data stored in two different tables.</p>
-        <p><strong>JPA</strong>- This is a specification for ORM in Java. There might be many implementations of this specification</p>
-        <p><strong>Hibernate </strong>- It is one of the implementations of JPA</p>
-
-
-
-          <table>
-            <tr>
-                <th class="course-title">JPA</th>
-                <th colspan="2" class="course-title">Hibernate</th>
-
-            </tr>
-            <tr>
-              <th>JPA Text Tutorial</th>
-              <th>Hibernate Text Tutorial</th>
-              <th>Hibernate Video Tutorial</th>
-            </tr>
-            <tr>
-              <td>InfoWorld</td>
-              <td>InfoWorld</td>
-              <td>Telusko (YouTube)</td>
-            </tr>
-            <tr>
-              <td><a target="_blank" href="https://www.infoworld.com/article/3379043/what-is-jpa-introduction-to-the-java-persistence-api.html">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.infoworld.com/article/3373652/java-persistence-with-jpa-and-hibernate-part-1-entities-and-relationships.html">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/watch?v=JR7-EdxDSf0">Link to Video</a></td>
-            </tr>
-          </table> <br>
-
-          <hr>
-
-
-    <h4 id="spring">2.2 Spring</h4>
+    <h4 id="spring">2.1 Spring</h4>
         <p>You should definitely use Spring Boot but I think you should not start with it. <strong>Start with Spring Core, Spring MVC, and at the end switch to Spring Boot.</strong>. Spring Boot  was created because Spring itself is so complicated that it needed a configuration framework. You need to know that only very old, legacy apps use XML config so don’t spend too much time on this approach. Every modern app uses an annotation-based config so focus on this way on configuring your app. </p>
 
         <table>
@@ -530,6 +496,37 @@
           </tr>
         </table> <br>
 
+
+      <h4 id="jpa-hibernate">2.2 ORM, JPA, Hibernate</h4>
+        <p> Apart from learning Spring you have to learn Hibernate. You need to know how to create your models and what relation annotation to use so that Spring could do its magic.</p>
+        <p><strong>ORM </strong>- The idea of taking java objects and mapping them to a data store. You can have a single class that will have data stored in two different tables.</p>
+        <p><strong>JPA</strong>- This is a specification for ORM in Java. There might be many implementations of this specification</p>
+        <p><strong>Hibernate </strong>- It is one of the implementations of JPA</p>
+
+          <table>
+            <tr>
+                <th class="course-title">JPA</th>
+                <th colspan="2" class="course-title">Hibernate</th>
+
+            </tr>
+            <tr>
+              <th>JPA Text Tutorial</th>
+              <th>Hibernate Text Tutorial</th>
+              <th>JPA/Hibernate with Spring Video Tutorial</th>
+            </tr>
+            <tr>
+              <td>InfoWorld</td>
+              <td>InfoWorld</td>
+              <td>kindsonthegenius (YouTube) <br> <a target="_blank" href="https://www.kindsonthegenius.com/hibernate-relationship-tutorial-onetomany-and-manytoone/">Link to walkthrough</a></td>
+            </tr>
+            <tr>
+              <td><a target="_blank" href="https://www.infoworld.com/article/3379043/what-is-jpa-introduction-to-the-java-persistence-api.html">Link to Tutorial</a></td>
+              <td><a target="_blank" href="https://www.infoworld.com/article/3373652/java-persistence-with-jpa-and-hibernate-part-1-entities-and-relationships.html">Link to Tutorial</a></td>
+              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkGYaUAI5lyppp8oyIBKk8d">Link to Playlist</a></td>
+            </tr>
+          </table> <br>
+
+
         <hr>
 
         <h4 id="spring-projects">2.3 Spring Project Tutorials</h4>
@@ -553,32 +550,7 @@
 
           <hr>
 
-
-          <h4 id="hibernate-spring">2.4 JPA/Hibernate with Spring</h4>
-          <p> Implementing JPA and Hibernate with Spring before learning to use Spring Boot JPA. </p>
-  
-  
-          <table>
-            <tr>
-                <th colspan="2" class="course-title">JPA/Hibernate with Spring</th>
-            </tr>
-            <tr>
-              <th>JPA/Hibernate with Spring Text Tutorial</th>
-              <th>JPA/Hibernate with Spring Video Tutorial</th>
-            </tr>
-            <tr>
-              <td>kindsonthegenius</td>
-              <td>YouTube</td>
-            </tr>
-            <tr>
-              <td><a target="_blank" href="https://www.kindsonthegenius.com/hibernate-relationship-tutorial-onetomany-and-manytoone/">Link to Tutorial</a></td>
-              <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL9l1zUfnZkZkGYaUAI5lyppp8oyIBKk8d">Link to Playlist</a></td>
-            </tr>
-          </table> <br>
-
-          <hr>
-
-        <h4 id="spring-data">2.5 Spring Data</h4>
+        <h4 id="spring-data">2.4 Spring Data</h4>
         <p> It generates methods that underneath use Hibernate. It significantly reduces the amount of boilerplate code in our project. Most likely you will be using Spring Data most often in your applications. But before you start using it you have to understand all the concepts. </p>
 
 
